[package]
name = "resin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
rand = { version = "0.8.4", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.2.0"
