[package]
name = "resin"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.69", features = ["preserve_order"] }
rand = { version = "0.8.4", features = ["alloc"] }
indexmap = { version = "1.8.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3.2.0"
